<resources>
    <string name="app_name">lab04</string>
    <string name="action_settings">Settings</string>
    <string name="intro_text">Droid Desserts</string>
    <string name="choose_a_dessert">Choose a dessert.</string>
    <string name="cheesecake">Cheesecake is soft and fluffy and covered in fruit.</string>
    <string name="chocolate">Chocolate with whipped cream is simply a delight.</string>
    <string name="strawberry">Strawberry Angel Cake is covered in ice cream and fresh strawberries.</string>
    <string name="cheesecake_order_message">You ordered a Cheesecake.</string>
    <string name="chocolate_order_message">You ordered a Chocolate Trifle.</string>
    <string name="strawberry_order_message">You ordered a Strawberry Angel Cake.</string>
    <string name="choose_delivery_method">Choose a delivery method:</string>
    <string name="next_day_ground_delivery">Next day ground delivery</string>
    <string name="same_day_messenger_service">Same day messenger service</string>
    <string name="pick_up">Pick up</string>
    <string name="chosen">"Chosen: "</string>
    <string name="nothing_clicked">onRadioButtonClicked: Nothing clicked.</string>
    <string name="action_contact">Contact</string>
    <string name="action_order">Order</string>
    <string name="action_status">Status</string>
    <string name="action_favorites">Favorites</string>
    <string name="action_order_message">You selected Order.</string>
    <string name="action_status_message">You selected Status.</string>
    <string name="action_favorites_message">You selected Favorites.</string>
    <string name="action_contact_message">You selected Contact.</string>
    <string name="title_activity_order">Order Activity</string>
</resources>
