<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="edu.calvin.cs262.jwk24.lab04.MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:id="@+id/textintro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/intro_text"
        android:textSize="@dimen/text_heading"
        android:padding="@dimen/padding_regular"/>

    <TextView
        android:id =	"@+id/choose_dessert"
        android:layout_width =	"wrap_content"
        android:layout_height =	"wrap_content"
        android:padding =	"@dimen/padding_regular"
        android:layout_below =	"@id/textintro"
        android:text =	"@string/choose_a_dessert" />


    <ImageView
        android:layout_width =	"@dimen/img_size"
        android:layout_height =	"@dimen/img_size"
        android:padding ="@dimen/padding_regular"
        android:id=	"@+id/cheesecake"
        android:layout_below	="@id/choose_dessert"
        android:contentDescription=	"@string/cheesecake"
        android:src="@drawable/cheesecake"
        android:onClick="showCheesecakeOrder"/>
    <TextView
        android:layout_width	="@dimen/img_size"
        android:layout_height=	"@dimen/img_size"
        android:padding=	"@dimen/caption_padding"
        android:layout_below=	"@+id/choose_dessert"
        android:layout_toRightOf=	"@id/cheesecake"
        android:text=	"@string/cheesecake"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />


    <ImageView
        android:layout_width =	"@dimen/img_size"
        android:layout_height =	"@dimen/img_size"
        android:padding ="@dimen/padding_regular"
        android:id=	"@+id/chocolate"
        android:layout_below=	"@+id/cheesecake"
        android:contentDescription=	"@string/chocolate"
        android:src="@drawable/chocolate"
        android:onClick="showChocolateOrder"/>
    <TextView
        android:layout_width	="@dimen/img_size"
        android:layout_height=	"@dimen/img_size"
        android:padding=	"@dimen/caption_padding"
        android:layout_below=	"@+id/cheesecake"
        android:layout_toRightOf=	"@id/chocolate"
        android:text=	"@string/chocolate"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />


    <ImageView
        android:layout_width =	"@dimen/img_size"
        android:layout_height =	"@dimen/img_size"
        android:padding ="@dimen/padding_regular"
        android:id=	"@+id/strawberry"
        android:layout_below=	"@+id/chocolate"
        android:contentDescription=	"@string/strawberry"
        android:src="@drawable/strawberry"
        android:onClick="showStrawberryOrder"/>
    <TextView
        android:layout_width	="@dimen/img_size"
        android:layout_height=	"@dimen/img_size"
        android:padding=	"@dimen/caption_padding"
        android:layout_below=	"@+id/chocolate"
        android:layout_toRightOf=	"@id/strawberry"
        android:text=	"@string/strawberry"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />
</RelativeLayout>
